--- a/custom.css
+++ b/custom.css
@@ -1,11 +1,11 @@
 img {
-  width: 30pt;
-  height: 30pt;
-  border-radius: 50pt;
+  width: 60pt;
+  height: 60pt;
 }
 
 body {
   background-color: rgba(100, 65, 165, 0.1);
+  font-family: Roboto, sans-serif;
 }
 
 .twitch-bar {
@@ -27,5 +27,31 @@ body {
 }
 
 .container-align {
-  text-align: left;
+  text-align: left-align;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+
+.card-size {
+  width: 40%;
+  height: 60pt;
+  margin: auto;
+}
+
+.card-alignment {
+  padding: 5em;
 }
